# tracker

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  setup.sh
backend/: config.py  database.py  dependencies.py  main.py
backend/db/: repository.py  schema.sql
backend/models/: calendar.py  jobs.py  logs.py  notifications.py  notion.py  resources.py  terminal.py
backend/routers/: calendar.py  config.py  health.py  jobs.py  logs.py  notifications.py  notion.py  resources.py  terminal.py
backend/services/: calendar_service.py  log_viewer.py  notification_service.py  notion_service.py  resource_monitor.py  scheduler.py  slurm.py  terminal_manager.py
backend/utils/: auth.py  process.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useCalendar.ts  useJobs.ts  useLogs.ts  useNotes.ts  useNotifications.ts  useResources.ts  useTerminal.ts
frontend/src/pages/: CalendarPage.tsx  Dashboard.tsx  JobsPage.tsx  LogsPage.tsx  NotificationsPage.tsx  NotionPage.tsx  ResourcesPage.tsx  SettingsPage.tsx  TerminalPage.tsx
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
scripts/: build_frontend.sh  google_auth.py  start.sh  status.sh  stop.sh
systemd/: hpc-tracker.service
